<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ProfileStyle">

    <LinearLayout style="@style/LinearStyle">

        <ImageView
            android:id="@+id/tour_picture"
            style="@style/ImageStyle"
            android:contentDescription="@string/tour_image_det"
            android:src="@drawable/sanpietro_pic" />

        <TextView
            android:id="@+id/tour_title"
            style="@style/TitleStyle"
            android:layout_below="@+id/tour_picture"
            android:text="@string/sanPietro" />

        <TextView
            android:id="@+id/tour_description"
            style="@style/DescriptionStyle"
            android:layout_below="@+id/tour_title"
            android:text="@string/sanPietroDesc" />

    </LinearLayout>
</ScrollView>
